refactor: simplify the logic for adding default request parameters
Enpoint interface already provides a convenient way to supply query parameters,
so there isn't much value in indirecting this over ContextEndpoint. Furthermore,
the latter's implementation assumes too much knowledge of the internal.rest package.

As for gRPC, ContextRpc had to do type checks, so there's hardly any code savings
that this approach brings. Adding the parameters to the messages 'in place' seems
to me much more straightforward.

Finally, I merged the 3 test classes for data/query/aggregate namespaces into one
because they follow the same structure, so grouping them will benefit the reader.